2015-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Another change targeting
	Coverity 44742 and 44746 "Unintended sign extension".

2015-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (TracePath): Fix Coverity 10258 "Uninitialized
	scalar variable".

	* magick/widget.c (MagickXFontBrowserWidget): Fix Coverity 10323
	"Sizeof not portable".  2nd try.

	* coders/xwd.c (ReadXWDImage): Fix Coverity 10095, 10100, 10104
	"Division or modulo by zero".  2nd try.

	* magick/analyze.c (GetImageCharacteristics): Fix Coverity 10096
	"Logically dead code".

	* coders/yuv.c (ReadYUVImage): Fix Coverity 10260 "Structurally
	dead code".

	* coders/xcf.c (ReadXCFImage): Fix Coverity 10226 "Missing break
	in switch".

	* coders/tim.c (ReadTIMImage): Fix Coverity 10249 "Unused value".

	* coders/tiff.c (CompressionSupported): Fix Coverity 44723
	"Logically dead code".
	(WriteTIFFImage): Fix Coverity 44742 and 44746 "Unintended sign
	extension".

	* coders/ps3.c (WritePS3Image): Validate results from TellBlob()
	and SeekBlob().  Should quiet Coverity 10198 "Improper use of
	negative value".

	* coders/ps2.c (WritePS2Image): Validate results from TellBlob()
	and SeekBlob().  Should quiet Coverity 10230 "Improper use of
	negative value".

	* coders/mpeg.c (WriteMPEGImage): Quiet Coverity 10176 "Missing
	break in switch".

	* coders/map.c (WriteMAPImage): Make MAP reader/writer more
	robust.  May quiet 10326 "Untrusted pointer read".

	* coders/locale.c (ReadLOCALEImage): Quiet Coverity 10108
	"Logically dead code".

	* coders/rle.c: Make URT RLE reader more robust.  Should quiet
	Coverity CID 10070 "Bad bit shift operation", as well as 10235
	"Improper use of negative value".

2015-04-04  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WriteOneJNGImage): Quiet Coverity CID issue 14370,
	"Unused value" (status was ignored).

	* coders/png.c (ReadOneJNGImage): Quiet Coverity CID issue 44724,