@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150406"
-#define public MagickPackageReleaseDate "snapshot-20150406"
+#define public MagickPackageVersionAddendum ".020150407"
+#define public MagickPackageReleaseDate "snapshot-20150407"
