@@ -1,3 +1,8 @@
+2015-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/xwindow.c (MagickXMakeImage): Quiet Coverity 10282
+	"Unused value".
+
 2015-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (WriteTIFFImage): Another change targeting
